# realtime-c2-gnn-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  BaoCao_C2GNN_Final.docx  BaoCao_C2GNN_v3_VanXuoi.docx  Dockerfile  LICENSE  Makefile  PROJECT_LOG.md  PROJECT_STATUS.md  README.md  _test4.docx  docker-compose.yml  init_project.sh  pyproject.toml  questions_answers.md  roadmap_tasks.md
.github/workflows/: ci.yml  security.yml
configs/: dataset.yaml  model_gat.yaml  model_graphsage.yaml  model_xgboost.yaml  realtime.yaml
data/: README.md
data/processed/: dataset_stats.json  scenario10_demo.parquet
docs/: demo_script.md  questions_answers.md  report_prompt.md  slides_outline.md
models/artifacts/: gatv2_best.pt  gatv2_metrics.json  graphsage_best.pt  graphsage_metrics.json  graphsage_threshold_analysis.json  shap_feature_importance.json  xgboost_metrics.json  xgboost_model.json
notebooks/: 01_EDA.ipynb
reports/: SLIDE_PRESENTATION_PROMPT.md  demo_checklist.md  final_metrics.json  results_table.txt  xgboost_classification_report.txt
reports/tables/: node_label_stats_graphsage.csv  threshold_sweep_graphsage.csv
scripts/: 01_download_ctu13.py  02_preprocess.py  03_train_xgboost.py  04_train_gnn.py  05_collect_metrics.py  06_threshold_analysis.py  Start-Demo.ps1  check_parquet_timing.py  debug_eval_parquet.py  debug_model_scores.py  debug_warmed_scores.py  find_threshold_parquet.py  fix_toc_docx.py  generate_report_docx.py  generate_report_figures.py
src/c2gnn/: cli.py
src/c2gnn/api/: __init__.py  server.py
src/c2gnn/dashboard/: app.py
src/c2gnn/data/: flow_builder.py
src/c2gnn/evaluation/: __init__.py
src/c2gnn/graph/: dynamic_graph.py
src/c2gnn/models/: graphsage.py  xgboost_baseline.py
src/c2gnn/realtime/: pipeline.py
tests/: conftest.py  test_dynamic_graph.py  test_flow_builder.py  test_gnn_integration.py
